# Advent-of-Code

2022/: .gitignore  build.zig
2022/src/: 01.zig  02.zig  common.zig  main.zig
2023/: .gitignore  aoc2023.cabal  stack.yaml
2023/app/: Main.hs
2023/src/: Aoc.hs  Common.hs  Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Parse.hs
